#  Copyright© 2024 Raúl Wolters(1)
#
#  This file is part of Inflatox.
#
#  Inflatox is free software: you can redistribute it and/or modify it under
#  the terms of the European Union Public License version 1.2 or later, as
#  published by the European Commission.
#
#  Inflatox is distributed in the hope that it will be useful, but WITHOUT ANY
#  WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
#  A PARTICULAR PURPOSE. See the European Union Public License for more details.
#
#  You should have received a copy of the EUPL in an/all official language(s) of
#  the European Union along with Inflatox.  If not, see 
#  <https://ec.europa.eu/info/european-union-public-licence_en/>.
#
#  (1) Resident of the Kingdom of the Netherlands; agreement between licensor and
#  licensee subject to Dutch law as per article 15 of the EUPL.

[package]
name = "libinflx_rs"
version = "0.0.0"
edition = "2021"
exclude = [
  ".venv/", ".vscode/", "notebooks/", "python/", "logos",
  "pyproject.toml", "rustfmt.toml", ".gitignore"
]

[lib]
name = "inflatox"
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = { version = "0.15", features = ['rayon'] }
numpy = "0.21"
pyo3 = { version = "0.21", features = ['extension-module', 'abi3-py37'] }
rayon = "1"
libloading = "0.8"
indicatif = { version = "0.17", features = ["rayon",  "improved_unicode"] }
console = { version = "0.15" }
lazy_static = { version = "1" }

[profile.release]
opt-level = 3
debug = "none"
strip = "debuginfo"
lto = "fat"
