#  Copyright© 2023 Raúl Wolters(1)
#
#  This file is part of Inflatox.
#
#  Inflatox is free software: you can redistribute it and/or modify it under
#  the terms of the European Union Public License version 1.2 or later, as
#  published by the European Commission.
#
#  Inflatox is distributed in the hope that it will be useful, but WITHOUT ANY
#  WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
#  A PARTICULAR PURPOSE. See the European Union Public License for more details.
#
#  You should have received a copy of the EUPL in an/all official language(s) of
#  the European Union along with Inflatox.  If not, see 
#  <https://ec.europa.eu/info/european-union-public-licence_en/>.
#
#  (1) Resident of the Kingdom of the Netherlands; agreement between licensor and
#  licensee subject to Dutch law as per article 15 of the EUPL.

[project]
name = "inflatox"
version = "0.1.0"
authors = [
  { name="Raúl Wolters", email="rawolters11@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
license = "EUPL"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3"
]
dependencies = ["cffi"]

[project.urls]
"Homepage" = "https://github.com/smups/inflatox"
"Bug Tracker" = "https://github.com/smups/inflatox/issues"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "inflatox.libinflx_rs"
features = ["pyo3_extension_module"]
rustc-args = ["-C", "link-arg=-lm"]