#  Copyright© 2023 Raúl Wolters(1)
#
#  This file is part of Inflatox.
#
#  Inflatox is free software: you can redistribute it and/or modify it under
#  the terms of the European Union Public License version 1.2 or later, as
#  published by the European Commission.
#
#  Inflatox is distributed in the hope that it will be useful, but WITHOUT ANY
#  WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
#  A PARTICULAR PURPOSE. See the European Union Public License for more details.
#
#  You should have received a copy of the EUPL in an/all official language(s) of
#  the European Union along with Inflatox.  If not, see 
#  <https://ec.europa.eu/info/european-union-public-licence_en/>.
#
#  (1) Resident of the Kingdom of the Netherlands; agreement between licensor and
#  licensee subject to Dutch law as per article 15 of the EUPL.

[project]
name = "inflatox"
version = "0.4.0"
authors = [
  { name="Raúl Wolters", email="rawolters11@gmail.com" },
]
description = "Framework for implementing high-performance numerical consistency conditions for multifield inflation models."
readme = "README.md"
requires-python = ">=3.7"
license = "EUPL-1.2"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "cffi",
  "numpy > 1",
  "sympy > 1",
  "joblib > 1",
  "einsteinpy >= 0.4",
  "ziglang >= 0.10"
]

[project.urls]
"Homepage" = "https://github.com/smups/inflatox"
"Bug Tracker" = "https://github.com/smups/inflatox/issues"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
compatibility = "manylinux2014"
bindings = "pyo3"
python-source = "python"
module-name = "inflatox.libinflx_rs"
rustc-args = ["-C", "link-arg=-lm"]
